# qw-demo-scraper

./: .env.example  .gitignore  README.md  database.py  hub.py  main.py  process_demos.sh  pyproject.toml  scripts.sh  util.py
demo_scraper/: scraper.py
demo_scraper/pkg/: analyze.py  checksum.py  demo_calc.py  mvdparser.py  parse.py  qcharset.py  qmode.py  qstring.py  server_info.py  title.py
demo_scraper/services/: aws.py  hub.py  supab.py
demo_scraper/services/supab/: database.py  demo.py  demo_calc.py  participants.py  player.py  supab.py  team.py
demo_updater/: main.py
demo_updater/pkg/: analyze.py  demo_calc.py  mvdparser.py  net.py  qtitle.py  server_info.py  title.py
demo_updater/services/: hub.py  supab.py
tests/: context.py  test_analyze.py  test_demo_calc.py  test_fixes.py  test_hub.py  test_mvdparser.py  test_qcharset.py  test_qmode.py  test_qstring.py  test_server_info.py  test_supab.py  test_title.py
tests/files/: 2on2_blue_vs_red[aerowalk]20231012-2359.mvd.json  duel_packetlossking_vs_[pikachu][bravado]231013-0406.mvd.json
tests/pkg/: test_analyze.py  test_fixes.py  test_hub.py  test_mvdparser.py  test_parse.py  test_qcharset.py  test_qmode.py  test_server_info.py  test_title.py
tests/services/supab/: test_demo_calc.py  test_participants.py  test_player.py  test_team.py
