[tool.poetry]
name = "qw-demo-updater"
version = "0.1.0"
description = ""
authors = ["Viktor Persson <viktor.persson@arcsin.se>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.28.62"
supabase = "^1.2.0"
requests = "^2.31.0"
black = "^23.9.1"
attrs = "^23.1.0"
cattrs = "^23.1.2"
python-dotenv = "^1.0.0"
natsort = "^8.4.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-watch = "^4.2.0"
pytest-describe = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["__init__.py", "tests/*"]
